--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,6 +9,14 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### December
+
+#### Thursday December 12
+[Dreissig et al. 2019](https://academic.oup.com/mbe/article/36/9/2029/5519773)
+Variation in Recombination Rate Is Shaped by Domestication and Environmental Conditions in Barley
+
+#### Thursday December 5
+No C.R.O.P
 
 ### November
 
