--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,6 +9,13 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### January
+
+#### Thursday January 9
+No C.R.O.P - Machine learning workshop
+
+## 2019
+
 ### December
 
 #### Thursday December 12
