--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,7 +9,15 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+
 ### Feburary
+
+#### Thursday Febraury 27
+[Groen et al. 2020](https://www.nature.com/articles/s41586-020-1997-2)
+The strength and pattern of natural selection on gene expression in rice
+
+#### Thursday Febraury 20
+No C.R.O.P - Carnaval 
 
 #### Thursday Febraury 12
 [Albers and McVean 2020](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3000586)
