--- a/reading.Rmd
+++ b/reading.Rmd
@@ -4,13 +4,18 @@ title: "What we read"
 &nbsp;
 
 C.R.O.P is our weekly journal club for anyone interested in evolution. 
-We meet on Thursdays at 4 pm at [Magnus](https://goo.gl/maps/HTsuGbneog1P3uWs5) for an open discussion about the weekly paper in a relaxed atmosphere. 
+We meet on Thursdays at 4 pm at [Theatercafe Filmdose](https://goo.gl/maps/mamsnSV5ZqThF4YY8) for an open discussion about the weekly paper in a relaxed atmosphere. 
 Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
 
 ### March
+
+#### Thursday March 19
+No C.R.O.P.
+
+
 #### Thursday March 12
 [Vasseur et al 2020](https://journals.plos.org/plosbiology/article/file?type=printable&id=10.1371/journal.pbio.3000214)
 Nonlinear phenotypic variation uncovers the emergence of heterosis in Arabidopsis thaliana
