--- a/reading.Rmd
+++ b/reading.Rmd
@@ -4,11 +4,19 @@ title: "What we read"
 &nbsp;
 
 C.R.O.P is our weekly journal club for anyone interested in evolution. 
-We meet on Thursdays at 4 pm at [Theatercafe Filmdose](https://goo.gl/maps/mamsnSV5ZqThF4YY8) for an open discussion about the weekly paper in a relaxed atmosphere. 
+We meet on Thursdays at 4.30 pm at [Theatercafe Filmdose](https://goo.gl/maps/mamsnSV5ZqThF4YY8) for an open discussion about the weekly paper in a relaxed atmosphere. 
+
+**Until further notice we will meet online. Please email  [Markus](mailto:m.stetter@uni-koeln.de) if you would like to participate.**
+
 Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### May
+
+#### Thursday May 7
+What is ancestry?
+[Mathieson and Scally 2020](https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008624)
 
 ### March
 
