--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### May
 
+#### Thursday May 14
+[Molin et al 2020](http://www.plantcell.org/content/early/2020/04/23/tpc.20.00099)
+The eccDNA Replicon: A Heritable, Extra-Nuclear Vehicle that Enables Gene Amplification and Glyphosate Resistance in Amaranthus palmeri
+
 #### Thursday May 7
 
 [Mathieson and Scally 2020](https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008624)
