--- a/publications.Rmd
+++ b/publications.Rmd
@@ -7,7 +7,7 @@
 
 
 ## Preprint
-* [Male linked genomic regions determine sex in dioecious *Amaranthus palmeri*]()  
+* [Male linked genomic regions determine sex in dioecious *Amaranthus palmeri*](https://www.biorxiv.org/content/10.1101/2020.05.25.113597v1.full)  
 **Cátia José Neves**, Maor Matzrafi, **Meik Thiele**, Anne Lorant, Mohsen B. Mesgaran and **Markus G. Stetter**
 *bioRxiv*
 
@@ -16,11 +16,12 @@ Roberto Lozano, Elodie Gazave, Jhonathan P.R. dos Santos, **Markus G Stetter**, 
 
 
 ## 2020
-* [Loss of diversity and accumulation of genetic load in doubled-haploid lines from European maize landrace](https://www.biorxiv.org/content/10.1101/817791v1)  
-Leo Zeitler, Jeffrey Ross-Ibarra and **Markus G Stetter**
+* [Loss of diversity and accumulation of genetic load in doubled-haploid lines from European maize landrace](https://www.g3journal.org/content/early/2020/05/28/g3.120.401196)  
+Leo Zeitler, Jeffrey Ross-Ibarra and **Markus G Stetter** *G3*  
+[Preprint](https://www.biorxiv.org/content/10.1101/817791v1)
 
 * [The temporal dynamics of background selection in non-equilibrium populations](https://doi.org/10.1534/genetics.119.302892)  
- Raul Torres\*, **Markus G Stetter**\*, Ryan Hernandez and Jeffrey Ross-Ibarra *Genetics*
+ Raul Torres\*, **Markus G Stetter**\*, Ryan Hernandez and Jeffrey Ross-Ibarra *Genetics*  
  [Preprint](https://www.biorxiv.org/content/10.1101/618389v1)  
  
  
@@ -34,32 +35,37 @@ Leo Zeitler, Jeffrey Ross-Ibarra and **Markus G Stetter**
 ## 2018
 
 * [Genetic architecture and selective sweeps after polygenic adaptation to distant trait optima](http://dx.doi.org/10.1371/journal.pgen.1007794)  
- **Markus G Stetter**, Kevin Thornton and Jeffrey Ross-Ibarra *PLOS Genetics* [Preprint](http://dx.doi.org/10.1101/313247)
+ **Markus G Stetter**, Kevin Thornton and Jeffrey Ross-Ibarra *PLOS Genetics*  
+   [Preprint](http://dx.doi.org/10.1101/313247)
 
 * [From Zero to Hero: The past, present and future of grain amaranth breeding](http://dx.doi.org/10.1007/s00122-018-3138-y)  
  Dinesh C Joshi, Salej Sood, Rajashekara H, Lakshmi Kant, A Pattanayak, Anil Kumar, Dinesh Yadav and **Markus G Stetter** *Theoretical and Applied Genetics* [PDF](articles/Joshi2018.pdf)
 
 * [Adaptation in plant genomes: Bigger is different](http://dx.doi.org/10.1002/ajb2.1002)  
- Wenbin Mei, **Markus G Stetter**, Daniel J. Gates, Michelle C. Stitzer and Jeffrey Ross-Ibarra *American Journal of Botany* [Preprint](https://www.biorxiv.org/content/early/2017/10/10/196501)
+ Wenbin Mei, **Markus G Stetter**, Daniel J. Gates, Michelle C. Stitzer and Jeffrey Ross-Ibarra *American Journal of Botany*   [Preprint](https://www.biorxiv.org/content/early/2017/10/10/196501)
 
 ## 2017
 
 * [How to make a domesticate](http://dx.doi.org/10.1016/j.cub.2017.06.048)  
- **Markus G Stetter**, Daniel J Gates, Wenbin Mei and Jeffrey Ross-Ibarra *Current Biology* [Preprint](https://peerj.com/preprints/2902)
+ **Markus G Stetter**, Daniel J Gates, Wenbin Mei and Jeffrey Ross-Ibarra *Current Biology*   [Preprint](https://peerj.com/preprints/2902)
 
 * [Analysis of phylogenetic relationships and genome size evolution of the Amaranthus genus using GBS indicates the ancestors of an ancient crop](http://dx.doi.org/10.1016/j.ympev.2016.12.029)  
- **Markus G Stetter** and Karl J Schmid *Molecular Phylogenetics and Evolution* [Preprint](http://dx.doi.org/10.1101/085472)
+ **Markus G Stetter** and Karl J Schmid *Molecular Phylogenetics and Evolution*  
+ [Preprint](http://dx.doi.org/10.1101/085472)
 
 * [Increased root hair density by loss of WRKY6 in Arabidopsis thaliana](http://dx.doi.org/10.7717/peerj.2891)  
- **Markus G Stetter**, Martin Benz and Uwe Ludewig *PeerJ* [Preprint](http://dx.doi.org/10.7287/peerj.preprints.2267v1)
+ **Markus G Stetter**, Martin Benz and Uwe Ludewig *PeerJ*   
+ [Preprint](http://dx.doi.org/10.7287/peerj.preprints.2267v1)
 
 * [Genomic and phenotypic evidence for an incomplete domestication of South American grain amaranth (Amaranthus caudatus)](http://dx.doi.org/10.1111/mec.13974)  
- **Markus G Stetter**, Thomas Müller and Karl J Schmid *Molecular Ecology* [Preprint](http://dx.doi.org/10.1101/025866)
+ **Markus G Stetter**, Thomas Müller and Karl J Schmid *Molecular Ecology*   
+ [Preprint](http://dx.doi.org/10.1101/025866)
 
 ## 2016
 
 * [Crossing methods and cultivation conditions for rapid production of segregating populations in three grain amaranth species](http://dx.doi.org/10.3389/fpls.2016.00816)  
- **Markus G Stetter**, Leo Zeitler, Adrian Steinhaus, Karoline Kroener, Michelle Biljecki and Karl J Schmid *Frontiers in Plant Science* [Preprint](http://dx.doi.org/10.7287/peerj.preprints.1951v1)
+ **Markus G Stetter**, Leo Zeitler, Adrian Steinhaus, Karoline Kroener, Michelle Biljecki and Karl J Schmid *Frontiers in Plant Science*  
+ [Preprint](http://dx.doi.org/10.7287/peerj.preprints.1951v1)
 
 ## 2015
 
