--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,7 +12,18 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### July
+
+#### Thursday Juli 2
+[Razifrad et al 2020](https://academic.oup.com/mbe/article/37/4/1118/5679792#201242622)
+Genomic Evidence for Complex Domestication History of the Cultivated Tomato in Latin America
+
 ### June
+
+#### Thursday June 18
+[Leder et al 2014](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4327155/)
+The Evolution and Adaptive Potential of Transcriptional Variation in Sticklebacks—Signatures of Selection and Widespread Heritability
+
 
 #### Thursday June 4
 [Voichek and Weigel 2020](https://www.nature.com/articles/s41588-020-0612-7)
