phd position added

--- a/impressum.Rmd
+++ b/impressum.Rmd
@@ -4,15 +4,14 @@ title: "Impressum"
 Angaben gemäß § 5 TMG
 
 Markus Stetter 
-Musterweg
-12345 Musterstadt 
+Zülpicher Str. 47b
+50674 Cologne/Germany
 
 Vertreten durch: 
 Markus Stetter
 Kontakt: 
-Telefon: 01234-789456
-Fax: 1234-56789
-E-Mail: mstetter[at]ucdavis.edu
+Telefon: +49 221 4703906
+E-Mail: m.stetter[at]uni-koeln.de
 
 
 ## Haftungsausschluss: 
