--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,13 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### September
+
+#### Thursday September 3
+[Dreissig et al 2020](https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.16810)
+Natural variation in meiotic recombination rate shapes introgression patterns in intraspecific hybrids between wild and domesticated barley
+
+
 ### July
 
 #### Thursday July 16
