--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,11 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### September
 
+#### Thursday September 10
+[Muyle, preprint](https://www.biorxiv.org/content/10.1101/2020.09.04.283333v1)
+Investigation Gene body methylation is under selection in Arabidopsis thaliana
+
+
 #### Thursday September 3
 [Dreissig et al 2020](https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.16810)
 Natural variation in meiotic recombination rate shapes introgression patterns in intraspecific hybrids between wild and domesticated barley
