--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### September
 
+#### Thursday September 17
+[Alonge et al. 2020](https://www.sciencedirect.com/science/article/abs/pii/S0092867420306164)
+Major Impacts of Widespread Structural Variation on Gene Expression and Crop Improvement in Tomato
+
 #### Thursday September 10
 [Muyle, preprint](https://www.biorxiv.org/content/10.1101/2020.09.04.283333v1)
 Investigation Gene body methylation is under selection in Arabidopsis thaliana
