--- a/people.Rmd
+++ b/people.Rmd
@@ -18,7 +18,7 @@ Please contact us if you are interested in joining the lab.
 <div style="float: left">
 <a href="https://twitter.com/mgstetter"><img src="own_images/Twitter_logo_blue.png" style="width: 20px;"></a><a href="http://mstetter.github.io"><img src="own_images/Home_icon_black.png" style="width: 20px;"></a><a href="https://scholar.google.de/citations?user=yYKVZQQAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a><a href="http://github.com/mstetter"><img src="own_images/GitHub-Mark-32px.png" style="width:20px;"></a>
 </div>
-Markus is a group leader in the Botanical Institute of the University of Cologne  [read more](about.html)  
+Markus is group leader in the Institute for Plant Sciences at the University of Cologne  [read more](about.html)  
 
 <!-- break -->
 <br>
@@ -49,6 +49,23 @@ José is a PhD student studying introgression during grain amaranth domesticatio
 <img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
+**Kerstin Schulz** 
+<div style="float: left">
+</div>
+Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs ancestral recombination graphs to study the evolution of maize 
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div style="float: left">
+<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+</div>
+
 **Tom Winkler** 
 <div style="float: left">
 </div>
@@ -66,22 +83,7 @@ Tom is a master student studying the genomic distribution of MYB transcription f
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
-**Kerstin Schulz** 
-<div style="float: left">
-</div>
-Kerstin is CEPLAS graduate student rotating in the lab. Kerstin emplyes ancestral recombination graphs to study the evolution of maize 
-<!-- break -->
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
-<div style="float: left">
-<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
-</div>
 
 **Julio Martinez** 
 <div style="float: left">
