--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,11 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### September
 
+#### Thursday September 24
+[Vianna et al. 2020](https://www.pnas.org/content/117/36/22303)
+Genome-wide analyses reveal drivers of penguin diversification
+
+  
 #### Thursday September 17
 [Alonge et al. 2020](https://www.sciencedirect.com/science/article/abs/pii/S0092867420306164)
 Major Impacts of Widespread Structural Variation on Gene Expression and Crop Improvement in Tomato
