--- a/reading.Rmd
+++ b/reading.Rmd
@@ -15,6 +15,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### October
 
+#### Thursday October 29
+[Zhou et al 2020](https://www.nature.com/articles/s41588-020-00722-w)
+Triticum population sequencing provides insights into wheat adaptation
+
 #### Thursday October 22
 No meeting!  
 [Barton and Keightley 2002](https://www.nature.com/articles/nrg700)
