remove phd position

--- a/news.Rmd
+++ b/news.Rmd
@@ -3,6 +3,10 @@ title: "News"
 ---
 &nbsp;
 
+- **October 1** Kerstin starting as PhD student in the lab
+
+### 2019 
+
 - **November 12** Tom submitted his thesis. Congrats
 - **September 30** Sophie successfully defended her thesis. Congrats
 - **September 15 -25** Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab  
