--- a/people.Rmd
+++ b/people.Rmd
@@ -27,6 +27,25 @@ Markus is group leader in the Institute for Plant Sciences at the University of 
 <!-- break -->
 
 ## PhD students
+
+<div style="float: left">
+<img src="own_images/people/Corbinian_Graf.JPG" style="width: 100px ;border:10px solid white">
+</div>
+
+**Corbinian Graf** 
+<div style="float: left">
+</div>
+Corbinian is a PhD student studying the genetic landscape of grain amaranth and how it changed during the repeated domestication. 
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 <div style="float: left">
 <img src="own_images/people/jose.jpg" style="width: 100px ;border:10px solid white">
 </div>
@@ -34,7 +53,7 @@ Markus is group leader in the Institute for Plant Sciences at the University of 
 **José Dias** 
 <div style="float: left">
 </div>
-José is a PhD student studying introgression during grain amaranth domestication and its influence on the crop's genome biology. 
+José is a PhD student studying gene flow between grain amaranth species and their wild relatives to reconstruct the domestication history of the crop. 
 <!-- break -->
 <br>
 <br>
@@ -60,6 +79,22 @@ Kerstin is a PhD student and part of the CEPLAS graduate school. Kerstin employs
 <br>
 <br>
 <br>
+
+## Lab manager
+**Roswitha Lentz** 
+<div style="float: left">
+</div>
+Roswitha runs the wet lab and does the pipetting magic
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 
 ## Master students
 
