--- a/reading.Rmd
+++ b/reading.Rmd
@@ -13,6 +13,12 @@ The idea is that everyone reads the paper before and we dive directly in without
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
 
+### March
+
+#### Thursday March 4
+[Meyer et al 2012](https://nph.onlinelibrary.wiley.com/doi/10.1111/j.1469-8137.2012.04253.x)
+Patterns and processes in crop domestication: an historical review and quantitative analysis of 203 global food crops
+
 ### February
 
 #### Thursday Febraury 25
