--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,15 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 
 ### March
+#### Thursday March 18
+[Huang et al 2020](https://www.nature.com/articles/s41467-020-19131-y)
+Genotype by environment interaction for gene expression in Drosophila melanogaster
+
+
+
+#### Thursday March 11
+MGM2021
+
 
 #### Thursday March 4
 [Meyer et al 2012](https://nph.onlinelibrary.wiley.com/doi/10.1111/j.1469-8137.2012.04253.x)
