CROP papers added

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -15,6 +15,14 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### April
 
+#### Thursday April 22
+[Chen et al preprint](https://www.biorxiv.org/content/10.1101/2021.04.07.438828v1)
+Portrait of a genus: the genetic diversity of Zea
+
+#### Thursday April 15
+[Mabry et al preprint](https://www.biorxiv.org/content/10.1101/2021.04.06.438638v1)
+The Evolutionary History of Wild, Domesticated, and Feral Brassica oleracea (Brassicaceae)
+
 #### Thursday April 8
 [Burban et al preprint](https://www.biorxiv.org/content/10.1101/2021.03.19.436202v1)
 Gene network simulations provide testable predictions for the molecular domestication syndrome
